{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "e64b0886-7ea6-4c08-b4e7-74f8e73e64cd",
            "actions": [
                {
                    "name": "Horizontal",
                    "type": "Value",
                    "id": "9218b739-fde7-4a03-8e80-892a166f6ff5",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Vertical",
                    "type": "Value",
                    "id": "cf4f27bb-990e-4c65-b356-bac4f59b52a5",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "f98d33ea-fe5a-4022-9f1a-9b270affa73f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "50f75b4b-2b38-4f76-bb97-38901166ed7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "c3bc302e-97c5-46c4-8e61-3cb28aab32e2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4b125e99-ed1b-446e-9b9b-9bc2555ee657",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b9eb05e3-66ae-4c1d-9e5e-60ae4e10e92a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "0fd68947-5e7a-4205-9d77-cbc2c2ca9be3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e41ca6d4-2cbd-44a1-b7af-fb975143061c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "375981fc-f12b-4a7b-a1fc-6a9f6f4ab92f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a5943539-fd9c-4ef8-a7ea-6bcacb01422c",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe579c99-0bad-4d73-8173-7cf0a606c9f7",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interact",
            "id": "0e5f0192-1211-4676-8110-b7989f6031ef",
            "actions": [
                {
                    "name": "Press",
                    "type": "Button",
                    "id": "07d886bd-b0cd-4932-9d3b-5a93171c76ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "61d53972-021b-4881-bbf8-7a7aa19a7558",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "822fa2e9-f70b-4157-a81c-dce75af4c90d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SwitchItem",
                    "type": "Value",
                    "id": "b4babdbc-91f3-4071-a986-03ba37b468b3",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Enter",
                    "type": "Button",
                    "id": "d8b34432-c756-41e5-b320-8dd96dae9b1f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "29d77b76-e94e-400f-afbc-715f8c0e509e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Monster Log",
                    "type": "Button",
                    "id": "e8246465-8078-4e17-9d07-046197341e34",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fe996f0f-076d-43bf-961c-b7bfbd3d9012",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6c9d708-336e-485d-8d85-6f07693d7122",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26b252fb-7b89-4ad7-abfb-6b7512e6b8dc",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "cff72537-64ff-4a3d-84d8-bfebda200125",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchItem",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6286146e-6e4c-448e-99f1-f6b6f3719251",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchItem",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ef1d0fef-69ca-43af-befc-67ff5ac5ae3b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchItem",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7d6f8dfa-d86c-4efc-ac09-7310f8bded53",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Enter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a10967a-ad71-413d-b300-efd2d291169a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad277be5-03d0-47c1-b2cf-f0aabb801e52",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Monster Log",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "912660df-12d0-4d56-8faa-e0ecf30ece82",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "169ede6b-29a6-4d9d-ad18-de352bc55f81",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ItemRotator",
                    "type": "Button",
                    "id": "fd240d7b-fa2d-47a2-a3ff-62f7456dc74b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f9482c31-5340-4e89-8582-fc244113a627",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "381236e5-2ba2-4ba1-b5fe-df29bc7ce4e8",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ItemRotator",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Dialog",
            "id": "1dab01ba-649d-4ef0-810a-744c9a86746c",
            "actions": [
                {
                    "name": "Change Option",
                    "type": "Value",
                    "id": "eb45456e-557b-43f5-b0dc-82ae1936ab87",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Choose Line",
                    "type": "Button",
                    "id": "67b93504-d20f-43f3-8c03-93f83f8170c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "67d1d2fa-ccef-43d4-a035-7a40ee35a745",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Change Option",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2d387e99-069a-47df-ac71-63a7a6bb60a3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Change Option",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b58f9ee5-3e6b-4727-ab56-753f596c4f61",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Change Option",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "167c19b9-13fc-4358-b450-9b1ee535d17b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Choose Line",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}